# MendAI

./: .gitignore  .renderignore  CHAT_FEATURE_COMPLETE.md  CHAT_FEATURE_GUIDE.md  CONVERSATION_MEMORY_FEATURE.md  CONVERSATION_MEMORY_TEST_GUIDE.md  DOCKER_README.md  DOCKER_SETUP.md  EVALUATION.md  IMPLEMENTATION_SUMMARY.md  JETSON_DEPLOYMENT.md  Makefile  PRE_PUSH_TEST_RESULTS.md  README.md  RENDER_DEPLOYMENT.md  RENDER_QUICKSTART.md  TESTING_CERTIFICATION.md  TESTING_COMPLETE.md  TESTING_QUICKSTART.md  TEST_RESULTS_SUMMARY.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  render.yaml  setup-environment.sh  setup-jetson.sh  setup.sh  test_chat_endpoint.py  test_evaluation.sh
backend/: .dockerignore
backend/biomedical-llm/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements.txt
backend/biomedical-llm/src/: main.py
backend/biomedical_llm/: Dockerfile.gpu  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
backend/biomedical_llm/biomedical_llm/: biomistral_qa.py  main.py  openbiollm_qa.py  test_biogpt.py  test_biogpt_large_pubmedqa.py  test_biomedlm.py
backend/biomedical_llm/biomedical_llm/config/: __init__.py  config.py
backend/biomedical_llm/biomedical_llm/evaluation/: __init__.py  metrics_collector.py
backend/biomedical_llm/biomedical_llm/routes/: __init__.py  chat.py  evaluation.py
backend/biomedical_llm/biomedical_llm/services/: __init__.py  openai_service.py  patient_data_client.py
backend/biomedical_llm/biomedical_llm/types/: __init__.py  chat.py
backend/common/: pyproject.toml
backend/common/common/core/: config.py  logger.py
backend/common/common/data_model/: __init__.py  common_response.py
backend/common/common/types/: __init__.py  ai_analysis.py  common_request.py
backend/common/types/: ai_analysis.py
backend/engine/: Dockerfile  Dockerfile.dev  README.md  main.py  pyproject.toml  test_dicom_conversion.py
backend/engine/engine/: main.py
backend/engine/engine/api/v0/: routes.py
backend/engine/engine/api/v0/endpoints/: ai_analysis.py  chat.py  dashboard.py  login.py
backend/engine/engine/core/: config.py
backend/engine/engine/data_models/: chat.py  login.py
backend/engine/engine/routes/: ai_analysis.py  chat.py  dashboard.py  login.py
backend/engine/engine/services/: conversation_manager.py  openai_service.py
backend/engine/engine/types/: __init__.py  chat.py  login.py
backend/engine/engine/utils/: dicom_processor.py  nii_processor.py
backend/engine/src/: main.py
backend/engine/src/api/v0/: routes.py
backend/engine/src/api/v0/endpoints/: chat.py  dashboard.py  login.py
backend/engine/src/data_models/: login.py
backend/imaging/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements.txt
backend/imaging/src/: main.py
backend/medical_imaging/: Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
backend/medical_imaging/medical_imaging/: main.py
backend/medical_imaging/medical_imaging/routes/: analysis.py
backend/medical_imaging/medical_imaging/services/: analysis.py
backend/medical_imaging/medical_imaging/templates/: templates.py
backend/medical_imaging/medical_imaging/types/: output.py
backend/patient-data/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/patient_data/: Dockerfile  README.md  pyproject.toml
backend/patient_data/patient_data/: main.py
backend/patient_data/patient_data/routes/: chat.py  conditions.py  encounters.py  medications.py  observations.py  patients.py
backend/patient_data/patient_data/services/: fhir_service.py  openai_service.py
common/: pyproject.toml
common/src/core/: config.py  logger.py
common/src/data_model/: common_response.py
docker/: README.md  build-base-images.sh
docker/backend/biomedical-llm/: Dockerfile  Dockerfile.dev
docker/backend/engine/: Dockerfile  Dockerfile.dev
docker/backend/imaging/: Dockerfile  Dockerfile.dev
docker/backend/patient-data/: Dockerfile  Dockerfile.dev
docker/common/base-images/: node-base.Dockerfile  python-base.Dockerfile  python-gpu-base.Dockerfile  python-gpu-jetson.Dockerfile
docker/frontend/: Dockerfile  Dockerfile.dev
e2e-docs/: E2E_IMPLEMENTATION_SUMMARY.md  E2E_TESTING_GUIDE.md  FULL_E2E_IMPLEMENTATION_CHECKLIST.md  README_TESTING.md  quick_chat_test.py  test_chat_feature.sh  verify-backend.bat  verify-backend.sh
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/pages/ChatPage/: ChatPage.css  ChatPage.tsx
frontend/src/pages/DashboardPage/: CtCaseListPage.tsx  DashboardPage.css  DashboardPage.tsx
frontend/src/pages/LoginPage/: LoginPage.css  LoginPage.tsx  SignUpPage.tsx
frontend/src/pages/PatientDashboardPage/: PatientDashboardPage.css  PatientDashboardPage.tsx
frontend/src/pages/PatientListPage/: PatientListPage.css  PatientListPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: ai-analysis.ts
frontend/tests/: README.md
frontend/tests/e2e/config/: test-env.d.ts  test-env.json
frontend/tests/e2e/fixtures/: validate-medical-images.cjs
frontend/tests/e2e/specs/: basic-flow.spec.ts  complete-success.spec.ts  ui-interaction.spec.ts
scripts/: downsample_nii.py  run-full-e2e.bat
(+7 files in other folders)
