[tool.poetry]
name = "common"
authors = ["Rick Truong <rickvtruong@gmail.com>"]
version = "0.1.0"
description = "Common package for the project"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
structlog = "^24.1.0"

[[tool.poetry.packages]]
include = "common"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"