[tool.poetry]
name = "engine"
version = "0.1.0"
description = "Backend Engine environment"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
