[tool.poetry]
name = "engine"
version = "0.1.0"
description = "Backend Engine environment"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
pydantic = "^2.0.0"
structlog = "^24.1.0"
python-multipart = "^0.0.9"
common = {path = "../common"}
pydicom = ">=2.3,<3.0"
pillow = "^11.3.0"
numpy = ">=1.21,<2.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
common = {path = "../common", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
