[tool.poetry]
name = "imaging"
version = "0.1.0"
description = "Medical Imaging Service environment"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
monai = {extras = ["all"], version = "^1.5.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
