[tool.poetry]
name = "patient-data"
version = "0.1.0"
description = "Patient Data Service environment"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
pydantic = "^2.0.0"
structlog = "^24.1.0"
common = {path = "../common"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
