[tool.poetry]
name = "patient-data"
version = "0.1.0"
description = "Patient Data Service environment"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.36.0"}
python-dotenv = "^1.1.1"
pydantic = "^2.0.0"
structlog = "^24.1.0"
common = {path = "../common"}
httpx = "^0.28.1"
google-cloud-bigquery = "^3.38.0"
google-auth = "^2.34.0"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
